# delta

./: .gitignore  LICENSE  README.md  delta-type-inference.cabal  rebuild.sh
delta-parse/: LICENSE  delta-parse.cabal  stack.yaml
delta-parse/exec/: Main.hs
delta-parse/lib/: DeltaPrecedence.hs  FormatIdent.hs  FormatIdent.hs-boot  Parse.hs  ParseDecl.hs  ParseExpr.hs  ParseIdent.hs  ParseIdent.hs-boot  ParseModule.hs  ParsePat.hs  ParseType.hs  ParseUtils.hs  Precedence.hs  StripRedundantMarks.hs  Syntax.hs  Syntax.hs-boot
delta-parse/test/: DeltaPrecedenceTests.hs  ParseDeclTests.hs  ParseExprTests.hs  ParseIdentTests.hs  ParseModuleTests.hs  ParsePatTests.hs  ParseTypeTests.hs  Spec.hs  StripMarks.hs  SyntaxUtils.hs
delta-structures/: delta-structures.cabal  stack.yaml
delta-structures/lib/Delta/Structures/: Syntax.hs  Syntax.hs-boot  TypeSolve.hs
delta-structures/lib/Utils/: FormatIdent.hs  FormatIdent.hs-boot
delta-type-solve/: README.md  delta-type-solve-tests.tix  delta-type-solve.cabal
delta-type-solve/exec/: main.hs
delta-type-solve/lib/: CollectionUtils.hs  ExternalProblem.hs  HandleExternalProblem.hs  PosetSubsetSession.hs  TypeInfer.hs  Unify.hs
delta-type-solve/test/: FamiliesTests.hs  HandleExternalProblemTests.hs  PropagateTests.hs  Spec.hs  TopoSortTests.hs  TypeInferTests.hs
exec/: main.hs
lib/: CollectionUtils.hs  ComplementSet.hs  ExternalProblem.hs  Families.hs  FoldInsert.hs  HandleExternalProblem.hs  HelpfulUnsafeLookup.hs  IndexSet.hs  OrderedPair.hs  PosetSubsetSession.hs  Propagate.hs  Toposort.hs  TypeInfer.hs  Unify.hs
src/: DirectedGraph.hs  Families.hs  Islands.hs  Main.hs  Toposort.hs
test/: DirectedGraphTests.hs  ExternalProblemTests.hs  FamiliesTests.hs  HandleExternalProblemTests.hs  IndexSetTests.hs  PosetSubsetSessionTests.hs  Spec.hs  TestUtils.hs  TopoSortTests.hs  UnifyTests.hs
