name:                delta-type-inference
version:             0.1.0.0
synopsis:            Type inference and type checking for Delta
description:         Please see README.md
homepage:            https://github.com/SelectricSimian/delta-type-inference#readme
license:             BSD3
license-file:        LICENSE
author:              William Brandon
maintainer:          hypercube97@gmail.com
copyright:           Copyright: (c) 2016 William Brandon
category:            Compiler
build-type:          Simple
cabal-version:       >=1.10

executable delta-type-inference
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       IndexSet
                     , PosetSubsetSession
                     , TopoSort
                     , Islands
                     , DirectedGraph
                     , Families
                     , HelpfulUnsafeLookup
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , mtl
                     , pretty-show
