name:                delta-type-inference
version:             0.1.0.0
synopsis:            Type inference and type checking for Delta
description:         Please see README.md
homepage:            https://github.com/SelectricSimian/delta-type-inference#readme
license:             BSD3
license-file:        LICENSE
author:              William Brandon
maintainer:          hypercube97@gmail.com
copyright:           Copyright: (c) 2016 William Brandon
category:            Compiler
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      lib
  other-modules:       IndexSet
                     , PosetSubsetSession
                     , TopoSort
                     , DirectedGraph
                     , Families
                     , Unify
                     , Propagate
                     , TypeInfer
                     , ExternalProblem
                     , HandleExternalProblem

                     -- Utility modules
                     , HelpfulUnsafeLookup
                     , FoldInsert
                     , OrderedPair
  ghc-options:         -Wall
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , mtl
                     , transformers
                     , text
                     , aeson

test-suite delta-type-inference-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test, lib
  main-is:             Spec.hs

  other-modules:       TestUtils

                     , DirectedGraph
                     , DirectedGraphTests

                     , Families
                     , FamiliesTests

                     , IndexSet
                     , IndexSetTests

                     , PosetSubsetSession
                     , PosetSubsetSessionTests

                     , TopoSort
                     , TopoSortTests

                     , Unify
                     , UnifyTests

                     , Propagate
                     , PropagateTests

                     , TypeInfer
                     , TypeInferTests

                     , ExternalProblem
                     , ExternalProblemTests

                     , HandleExternalProblem
                     , HandleExternalProblemTests

                     -- non-tested modules
                     , HelpfulUnsafeLookup
                     , FoldInsert
                     , OrderedPair

  build-depends:       base >= 4.7 && < 5
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , mtl
                     , hspec
                     , hspec-core
                     , transformers
                     , text
                     , aeson
