name:                delta-parse
version:             0.1.0.0
synopsis:            Source code parsing for Delta
description:         Please see README.md
homepage:            https://github.com/SelectricSimian/delta/tree/master/delta-parse#readme
license:             BSD3
license-file:        LICENSE
author:              William Brandon
maintainer:          hypercube97@gmail.com
copyright:           Copyright: (c) 2016 William Brandon
category:            Compiler
build-type:          Simple
cabal-version:       >=1.10

executable delta-parse
  hs-source-dirs:      exec
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , delta-parse
                     , text
                     , bytestring
                     , aeson
                     , delta-structures
  default-language:    Haskell2010

library
  hs-source-dirs:      lib
  exposed-modules:     Parse

  other-modules:       ParseUtils
                     , ParseIdent
                     , ParseExpr
                     , ParsePat
                     , ParseType
                     , ParseDecl
                     , ParseModule
                     , Precedence
                     , DeltaPrecedence
                     , StripRedundantMarks

  build-depends:       base >= 4.7 && < 5
                     , parsec
                     , text
                     , containers
                     , aeson
                     , delta-structures
                     , scientific
  default-language:    Haskell2010

test-suite delta-parse-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test, lib
  main-is:             Spec.hs

  other-modules:       ParseUtils
                     , SyntaxUtils
                     , StripMarks

                     , ParseIdent
                     , ParseIdentTests

                     , ParseExpr
                     , ParseExprTests

                     , ParsePat
                     , ParsePatTests

                     , ParseType
                     , ParseTypeTests

                     , ParseDecl
                     , ParseDeclTests

                     , ParseModule
                     , ParseModuleTests

                     , Precedence

                     , DeltaPrecedence
                     , DeltaPrecedenceTests

  build-depends:       base
                     , hspec
                     , parsec
                     , text
                     , containers
                     , aeson
                     , delta-structures
                     , scientific
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
