name:                delta-type-solve
version:             0.1.0.0
synopsis:            Type inference and type checking for Delta
description:         Please see README.md
homepage:            https://github.com/SelectricSimian/delta/tree/master/delta-type-solve#readme
license:             BSD3
license-file:        LICENSE
author:              William Brandon
maintainer:          hypercube97@gmail.com
copyright:           Copyright: (c) 2016 William Brandon
category:            Compiler
build-type:          Simple
cabal-version:       >=1.10

executable delta-type-solve
  hs-source-dirs:      exec
  main-is:             main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , delta-type-solve
                     , containers
                     , text
                     , aeson
                     , bytestring
                     , delta-structures

library
  hs-source-dirs:      lib
  exposed-modules:     HandleExternalProblem
  other-modules:       IndexSet
                     , PosetSubsetSession
                     , TopoSort
                     , DirectedGraph
                     , Families
                     , Unify
                     , Propagate
                     , TypeInfer

                     -- Utility modules
                     , CollectionUtils
                     , OrderedPair
                     , ComplementSet
  ghc-options:         -Wall
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , mtl
                     , transformers
                     , text
                     , aeson
                     , delta-structures

test-suite delta-type-solve-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test, lib
  main-is:             Spec.hs

  other-modules:       TestUtils

                     , DirectedGraph
                     , DirectedGraphTests

                     , Families
                     , FamiliesTests

                     , IndexSet
                     , IndexSetTests

                     , PosetSubsetSession
                     , PosetSubsetSessionTests

                     , TopoSort
                     , TopoSortTests

                     , Unify
                     , UnifyTests

                     , Propagate
                     , PropagateTests

                     , TypeInfer
                     , TypeInferTests

                     , HandleExternalProblem
                     , HandleExternalProblemTests

                     -- non-tested modules
                     , CollectionUtils
                     , OrderedPair
                     , ComplementSet

  build-depends:       base >= 4.7 && < 5
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , mtl
                     , hspec
                     , hspec-core
                     , transformers
                     , text
                     , aeson
                     , delta-structures
